--- a/Assignment.html
+++ b/Assignment.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="script.js">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -95,7 +95,8 @@
     © 2025 Sajjan Bhandari. All rights reserved.
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap.min.css"></script>
 </body>
+
 
 </html>
