--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Sajjan Bhandari | Portfolio</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="portfolio.css">
@@ -141,7 +141,7 @@
   </footer>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap.min.css"></script>
 
   <!-- Custom JS -->
   <script src="portfolio.js"></script>
@@ -149,3 +149,4 @@
 
 
 </html>
+
