--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="quiz.css">
 </head>
 <body class="bg-light">
@@ -25,3 +25,4 @@
   <script src="quiz.js"></script>
 </body>
 </html>
+
